--- a/src/scss/components/calendar/calendar.scss
+++ b/src/scss/components/calendar/calendar.scss
@@ -11,6 +11,10 @@
         background-color: #f82462;
         box-shadow: 0 4px 20px 0px rgba(0, 0, 0, 0.14), 0 7px 10px -5px rgba(244, 67, 54, 0.4);
     }
+    .event-owner {
+        background-color: #F74377;
+        box-shadow: 0 4px 20px 0px rgba(0, 0, 0, 0.14), 0 7px 10px -5px rgba(244, 67, 54, 0.4);
+    }
     .event-azure {
         background-color: #00bcd4;
         box-shadow: 0 4px 20px 0px rgba(0, 0, 0, 0.14), 0 7px 10px -5px rgba(0, 188, 212, 0.4);
