--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -1,6 +1,6 @@
 $primary-color: #f82462;
 $primary-light-color: #fa6691;
-$primary-color-alpha: #f82462b8;
+$primary-color-alpha: unquote('#f82462b8');
 $primary-color-disabled: rgba(248, 44, 98, 0.31);
 $secondary-color: #252525;
 $secondary-light-color: #3a3a3a;
