--- a/src/scss/pages/checkout.scss
+++ b/src/scss/pages/checkout.scss
@@ -153,6 +153,24 @@
 .text-gray {
   color: #BEBEBE;
 }
+.select-addr-btn, .select-card-btn {
+  border: none;
+  background: none;
+
+  &:hover {
+    background: none;
+  }
+}
+.select-addr-btn ~ div, .select-card-btn ~ div {
+  border: none;
+  width: 240%;
+}
+.project-name-container {
+  border: 30px solid #f4f5f6;
+  width: 100%;
+  padding: 28px;
+  margin-bottom: 30px;
+}
 
 @media (max-width: 1199px) {
   .checkout {
