--- a/src/scss/pages/rent-gear-detail.scss
+++ b/src/scss/pages/rent-gear-detail.scss
@@ -8,7 +8,9 @@
 .view-gear-detail {
   margin-bottom: 60px;
 }
-
+.star-white {
+  color: white;
+}
 .breadcrumb {
   padding: 0 0 15px 0;
   border-bottom: solid 1px #f4f4f4;
@@ -435,8 +437,11 @@
   padding: 0;
 }
 .star-wrapper {
-  color: $primary-color;
+  color: #F74377;
   align-items: center;
+  & span span span:hover {
+    width: 100% !important;
+  }
 }
 .gear-address-container {
   align-items: center;
