--- a/src/scss/pages/payment.scss
+++ b/src/scss/pages/payment.scss
@@ -8,7 +8,7 @@
   }
   .payment-card {
     padding: 15px 20px;
-    width: 49%;
+    width: 54%;
     min-height: 180px;
     box-shadow: 0px 2px 22px -2px rgba(173, 173, 173, 0.2);
     border-radius: 10px;
@@ -23,6 +23,7 @@
       letter-spacing: 0.14em;
       text-transform: uppercase;
       color: #000000;
+      text-align: center;
     }
 
     .payment-card-other {
@@ -169,7 +170,7 @@
 
 @media (max-width: 1199px) {
   .payment-card {
-    width: 52% !important;
+    width: 54% !important;
   }
 }
 
