--- a/src/scss/common.scss
+++ b/src/scss/common.scss
@@ -157,6 +157,17 @@ img {
   object-fit: cover;
 }
 
+.circle-loader {
+  height: 100%;
+  div {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+}
+
 @media(max-width: 500px) {
   .mt-xs {
     margin-top: 10px;
