--- a/src/scss/theme.scss
+++ b/src/scss/theme.scss
@@ -28,7 +28,7 @@
 .theme-table {
   background-color: $white !important;
   text-align: left;
-  border: 20px solid #f4f5f6;
+  border: 20px solid #FAF8F9;
   margin-top: 15px;
 
   th {
