--- a/src/scss/pages/dashboard.scss
+++ b/src/scss/pages/dashboard.scss
@@ -378,25 +378,39 @@ color: #fff
   font-size: 20px;
   display: flex;
 
-  & > .status-bar:before {
-    content: "";
-    left: 0;
-    bottom: 0;
-    width: 0;
-    height: 0;
-    border-left: 20px solid white;
-    border-top: 20px solid transparent;
-    border-bottom: 20px solid transparent;
+  & > .status-bar {
+    font-family: Helvetica Neue;
+    font-size: 12px;
+    line-height: 18px;
+    text-align: center;
+    letter-spacing: 0.03em;
+    color: #FFFFFF;
+    width: 84px;
+    height: 25px;
+    align-items: center;
+    display: flex;
+    justify-content: center;
+    background: #1CDB74;
+    -webkit-clip-path: polygon(0% 0%, 90% 0%, 100% 50%, 90% 100%, 0% 100%);
+    clip-path: polygon(0% 0%, 90% 0%, 100% 50%, 90% 100%, 0% 100%);
   }
-  & > .status-bar:after {
-    content: "";
-    right: -20px;
-    bottom: 0;
-    height: 0;
-    border-left: 20px solid red;
-    border-top: 20px solid transparent;
-    border-bottom: 20px solid transparent;
-    width: 30%;
+  .status-bar1 {
+    z-index: 5;
+  }
+  .status-bar2 {
+    z-index: 4;
+    margin-left: -7px;
+    background-color: #FBF6E8;
+    color: #DBA61C !important;
+  }
+  .status-bar3 {
+    z-index: 3;
+    margin-left: -14px;
+    background-color: #F4F4F4;
+    color: #252525;
+    opacity: 0.5;
+    width: 84px;
+    height: 25px;
   }
 
   .rotated-square {
@@ -694,12 +708,6 @@ color: #fff
   }
 }
 
-//
-//width: 150px;
-//height: 150px;
-//background: #1e90ff;
-//-webkit-clip-path: polygon(0% 0%, 75% 0%, 100% 50%, 75% 100%, 0% 100%);
-//clip-path: polygon(0% 0%, 75% 0%, 100% 50%, 75% 100%, 0% 100%);
 
 // Order detail page
 .order-detail-container {
