--- a/src/scss/pages/dashboard.scss
+++ b/src/scss/pages/dashboard.scss
@@ -369,7 +369,7 @@ color: #fff
   width: 100%;
 }
 
-// Order history
+// OrderHistory history
 .owner-profile img {
   border-radius: 18px;
 }
@@ -643,7 +643,7 @@ color: #fff
   }
 }
 
-// Order pickup modal
+// OrderHistory pickup modal
 .pickup-modal {
   .pickup-success-header {
     height: 320px !important;
@@ -709,7 +709,7 @@ color: #fff
 }
 
 
-// Order detail page
+// OrderHistory detail page
 .order-detail-container {
   .detail-top-button-container {
     display: flex;
