--- a/src/scss/bootstrap4.1.3/mixins/_breakpoints.scss
+++ b/src/scss/bootstrap4.1.3/mixins/_breakpoints.scss
@@ -1,6 +1,6 @@
 // Breakpoint viewport sizes and media queries.
 //
-// Breakpoints are defined as a map of (name: minimum width), Order from small to large:
+// Breakpoints are defined as a map of (name: minimum width), OrderHistory from small to large:
 //
 //    (xs: 0, sm: 576px, md: 768px, lg: 992px, xl: 1200px)
 //
