gear history - working on calendar rendering issue

--- a/src/js/components/Pages/Dashboard/GearHistory/style.css
+++ b/src/js/components/Pages/Dashboard/GearHistory/style.css
@@ -249,3 +249,13 @@
 .date-range-wrapper-period {
     margin-left: -229px !important;
 }
+
+.period-cart-header {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.period-cart-header img {
+    width: 50px;
+    height: 50px;
+}
