--- a/src/js/components/Pages/Dashboard/GearHistory/style.css
+++ b/src/js/components/Pages/Dashboard/GearHistory/style.css
@@ -254,8 +254,24 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    background-size: 100% 100%;
+    height: 158px;
+    font-size: 30px;
+    color: white;
+    text-align: left;
+    padding: 37px;
+    white-space: nowrap;
+    display: -webkit-flex;
+    display: flex;
+    background-color: #f82462;
 }
 .period-cart-header img {
     width: 50px;
     height: 50px;
+    margin-right: 15px;
+}
+.rbc-event-custom-data-cross {
+    background-image: url('/images/Icons/cart/cross-p.svg');
+    width: 20px;
+    height: 20px;
 }
