--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -13,6 +13,7 @@
 @import 'components/custom-input';
 @import 'components/custom-carousel';
 @import 'components/navbar';
+@import 'components/history_dialog';
 @import 'components/theme-card-one';
 @import 'components/theme-card-two';
 @import 'components/footer';
