--- a/src/js/components/Pages/Dashboard/GearHistory/style.css
+++ b/src/js/components/Pages/Dashboard/GearHistory/style.css
@@ -271,7 +271,22 @@
     margin-right: 15px;
 }
 .rbc-event-custom-data-cross {
-    background-image: url('/images/Icons/cart/cross-p.svg');
+    background-image: url('/images/Icons/cross/cross.svg');
     width: 20px;
     height: 20px;
+}
+.rbc-event-custom-data-top {
+    display: flex;
+    justify-content: space-between;
+}
+.rbc-event-item-wrapper {
+    display: flex;
+}
+
+.delete-period-button-container {
+    padding: 20px;
+}
+
+.Calendar_parent_div .event-owner {
+    background-color: #f74377 !important;
 }
