order histroy mobile responsive update

--- a/src/scss/pages/dashboard.scss
+++ b/src/scss/pages/dashboard.scss
@@ -1126,7 +1126,7 @@ color: #fff
      font-size: 20px;
      line-height: 25px;
      color: #252525;
-     font-weight: 800;
+     font-weight: 500;
    }
  }
  .order_mobile_parent_div {
@@ -1247,4 +1247,7 @@ color: #fff
   .styles_modal__gNwvD {
     margin-top: 10vh;
   }
+}
+.order_history_sm_parent_div {
+  border:15px solid #faf8f9;
 }
