--- a/src/scss/pages/dashboard.scss
+++ b/src/scss/pages/dashboard.scss
@@ -78,9 +78,6 @@
       margin-top: 15px;
     }
 
-    .tab-title-listings{
-      margin-top: 13px;
-    }
     .fa-table-selected{
       margin-top: -50px;
       .react-tabs__tab-list{
@@ -227,6 +224,9 @@
             }
           }
           .listing-data-tbody{
+            .edit-gear-td {
+              text-align: center;
+            }
             p{
               margin: auto !important;
             }
@@ -308,12 +308,7 @@
 
 
     }
-    .my-listing-tabs{
-      padding:30px;
-      .wrraper_dashboard{
-        padding: 0;
-        padding: 30px 30px 52px 30px;
-      }
+    .my-listing-tabs {
       .react-tabs__tab-list{
         border: 1px solid #f74962;
         border-radius: 30px;
@@ -814,7 +809,6 @@ span.edit_my_gear {
   height: 30px;
   margin: 0;
   vertical-align: middle !important;
-  margin-bottom: 12px !important;
   cursor: pointer;
   background-image: url('/images/Icons/cart/edit-b.svg') !important;
 
@@ -827,11 +821,28 @@ span.edit_my_gear {
   max-width: 1200px !important;
   height: 1400px;
 
+  .gear-edit-modal-header {
+    text-align: center;
+    padding: 35px;
+  }
   input {
     outline: none;
   }
   button {
     cursor: pointer;
+  }
+}
+.rental-calendar-modal {
+  max-width: 1200px !important;
+  width: 1200px;
+  height: 1100px;
+}
+.address-wrapper {
+  display: flex;
+  margin: 40px 0;
+
+  .custom-input:first-child {
+    margin-right: 25px;
   }
 }
 
@@ -1030,11 +1041,6 @@ span.edit_my_gear {
   .dashboard-body{
     .listing-body{
       .align-items-center{
-        .tab-title-listings{
-          margin-bottom: 14px !important;
-          margin-top: 0px !important;
-        }
-
       }
       .fa-table-selected{
         margin-top:0px !important;
@@ -1067,9 +1073,11 @@ span.edit_my_gear {
                     height: 356px !important;
                     td {
                       border-top: 16px solid #f3f3f3 !important;
+                      &:last-child {
+                        text-align: center;
+                      }
                     }
                   }
-
                 }
               }
             }
@@ -1277,9 +1285,6 @@ span.edit_my_gear {
    }
 
  }
-.styles_modal__gNwvD {
-  background-color: #faf8f9;
-}
 @media (max-width:550px) {
   .styles_closeButton__20ID4 {
     top: -36px;
